--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,7 @@
     <title>Админ-панель - Мой Петропавловск</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body class="bg-gray-50">
     {{template "header" .}}
